# gdut-robocon11-host-computer-project

./: .gitignore  CMakeLists.txt  block_face_pipeline.hpp  main.cpp  main_pole.cpp  main_weapon.cpp  yolo_model_segmentor.hpp
include/: block_face_pipeline.hpp  geometry_utils.hpp  yolo_model_classifier.hpp  yolo_model_detector.hpp  yolo_model_interface.hpp  yolo_model_segmentor.hpp
